--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,14 @@
     "require": {
         "php": "^7.1.3",
         "Maatwebsite/excel": "^3.1",
+        "bacon/bacon-qr-code": "~1.0",
         "fideloper/proxy": "^4.0",
+        "kyslik/column-sortable": "^5.8",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "~2.1.0",
+        "nesbot/carbon": "~1.0",
+        "pragmarx/google2fa-laravel": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
